src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Donation</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Pledged</fullName>
        </values>
        <values>
            <fullName>Posted</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Withdrawn</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Grant</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Application Submitted</fullName>
        </values>
        <values>
            <fullName>Awarded</fullName>
        </values>
        <values>
            <fullName>LOI Submitted</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Withdrawn</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>In-Kind Gift</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cultivating</fullName>
        </values>
        <values>
            <fullName>In-Kind Not Yet Received</fullName>
        </values>
        <values>
            <fullName>In-Kind Received</fullName>
        </values>
        <values>
            <fullName>Withdrawn</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Major Gift</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Awarded</fullName>
        </values>
        <values>
            <fullName>Cultivation</fullName>
        </values>
        <values>
            <fullName>Declined</fullName>
        </values>
        <values>
            <fullName>Identification</fullName>
        </values>
        <values>
            <fullName>Posted</fullName>
        </values>
        <values>
            <fullName>Proposal%2FReview</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Solicitation</fullName>
        </values>
        <values>
            <fullName>Verbal Commitment</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Training Sales</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contract Executed</fullName>
        </values>
        <values>
            <fullName>Contract Sent</fullName>
        </values>
        <values>
            <fullName>Contract Signed</fullName>
        </values>
        <values>
            <fullName>Initial Contact</fullName>
        </values>
        <values>
            <fullName>Invoice</fullName>
        </values>
        <values>
            <fullName>Opportunity Completed</fullName>
        </values>
        <values>
            <fullName>Payment</fullName>
        </values>
        <values>
            <fullName>Proposal Accepted</fullName>
        </values>
        <values>
            <fullName>Proposal Declined</fullName>
        </values>
        <values>
            <fullName>Proposal Sent</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>All_Inclusive_Training_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All-Inclusive Training Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CFG_AnticipatedDeliveryDate__c</fullName>
        <label>Anticipated Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CFG_AnticipatedFiscalYear__c</fullName>
        <label>Anticipated Fiscal Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFG_Audience_Size__c</fullName>
        <label>Audience Size</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFG_EndDateofTraining__c</fullName>
        <label>End Date of Training</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CFG_StartDateofTraining__c</fullName>
        <label>Start Date of Training</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CFG_nterestCourse__c</fullName>
        <label>Interest: Course</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Course</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Huddle_Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Huddle Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Import_ID__c</fullName>
        <externalId>true</externalId>
        <label>Import ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Interest_Competencies__c</fullName>
        <label>Interest: Competencies</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Interest_Competencies</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest_Curricula_Programs__c</fullName>
        <label>Interest: Curricula Programs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Interest_Curricula_Programs</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest_Formats__c</fullName>
        <label>Interest: Formats</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Interest_Formats</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest_Topical_Sessions__c</fullName>
        <label>Interest: Topical Sessions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Interest_Topical_Sessions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nimble_ID__c</fullName>
        <externalId>true</externalId>
        <label>Nimble ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Project_Code__c</fullName>
        <inlineHelpText>Picklist for internal training Project Code</inlineHelpText>
        <label>Project Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>300000</fullName>
                </value>
                <value>
                    <fullName>700000</fullName>
                </value>
                <value>
                    <fullName>901550</fullName>
                </value>
                <value>
                    <fullName>901551</fullName>
                </value>
                <value>
                    <fullName>901560</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_ActivityCode__c</fullName>
        <label>Activity Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_All_Inclusive_Training_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All-Inclusive Training Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cfg_Anonymous__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anonymous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cfg_Check_Date__c</fullName>
        <label>Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cfg_Huddle_Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Huddle Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cfg_InterestCurriculaPrograms__c</fullName>
        <label>Interest: Curricula Programs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>cfg_Interest_Curricula_Programs</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_InterestPotentialFutureOfferings__c</fullName>
        <label>Interest: Potential Future Offerings</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>cfg_Interest_Potential_Future_Offerings</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Likelihood__c</fullName>
        <label>Likelihood</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>cfg_Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cfg_Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Pubs</fullName>
                </value>
                <value>
                    <fullName>Wire</fullName>
                </value>
                <value>
                    <fullName>In Kind</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Payroll</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Payment_Status__c</fullName>
        <label>Payment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PAID</fullName>
                </value>
                <value>
                    <fullName>Unpaid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Priority_Level__c</fullName>
        <label>Priority Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Med</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_ProposalExpirationDate__c</fullName>
        <label>Proposal Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cfg_Reference__c</fullName>
        <label>Reference #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllDonations</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Donation</value>
        </filters>
        <label>All Donations</label>
    </listViews>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>Business_Ops</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Product_and_Innovation_Division</value>
        </filters>
        <label>Business Ops</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>Dev_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Donation,Opportunity.Grant,Opportunity.In_Kind_Gift,Opportunity.MajorGift,Opportunity.Matching_Gift</value>
        </filters>
        <label>Dev Opportunities</label>
        <sharedTo>
            <role>Staff</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Grant_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.NAME</field>
            <operation>contains</operation>
            <value>Grant</value>
        </filters>
        <label>Grant Opportunities</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>Donation</fullName>
        <active>true</active>
        <businessProcess>Donation</businessProcess>
        <description>Donation Received</description>
        <label>Donation</label>
        
        
        
        
        
    </recordTypes>
    <recordTypes>
        <fullName>Grant</fullName>
        <active>true</active>
        <businessProcess>Grant</businessProcess>
        <description>Grant Received</description>
        <label>Grant</label>
        
        
        
        
        
        
    </recordTypes>
    <recordTypes>
        <fullName>In_Kind_Gift</fullName>
        <active>true</active>
        <businessProcess>In-Kind Gift</businessProcess>
        <description>Goods or Services received as In-Kind</description>
        <label>In-Kind Gift</label>
        
        
        
        
        
        
        
        
    </recordTypes>
    <recordTypes>
        <fullName>MajorGift</fullName>
        <active>true</active>
        <businessProcess>Major Gift</businessProcess>
        <description>Large Donation from a Major Donor</description>
        <label>Major Gift</label>
        
        
        
        
        
        
    </recordTypes>
    <recordTypes>
        <fullName>Matching_Gift</fullName>
        <active>true</active>
        <businessProcess>Donation</businessProcess>
        <description>Matching Donation from an Donor's Employer or other Organization</description>
        <label>Matching Gift</label>
        
        
        
        
        
        
    </recordTypes>
    <recordTypes>
        <fullName>Membership</fullName>
        <active>true</active>
        <businessProcess>Donation</businessProcess>
        <description>A membership record type</description>
        <label>Membership</label>
        
        
        
        
        
    </recordTypes>
    <recordTypes>
        <fullName>Product_and_Innovation_Division</fullName>
        <active>true</active>
        <businessProcess>Training Sales</businessProcess>
        <label>Product and Innovation Division</label>
        
        
        
        
        
        
        
        
        
    </recordTypes>
    <recordTypes>
        <fullName>Training</fullName>
        <active>true</active>
        <businessProcess>Training Sales</businessProcess>
        <label>Training</label>
        
        
        
        
        
        
        
        
        
    </recordTypes>
    <recordTypes>
        <fullName>Training_Sale</fullName>
        <active>true</active>
        <businessProcess>Training Sales</businessProcess>
        <label>Training Sale</label>
        
        
        
        
        
        
        
        
        
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>